--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 os: osx
-osx_image: xcode11.3
+osx_image: xcode12
 language: objective-c
-xcode_workspace: example.xcworkspace
-xcode_scheme: example
-xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
+# xcode_workspace: example.xcworkspace
+# xcode_scheme: example
+# xcode_destination: "platform=iOS Simulator,OS=14.0,name=iPhone 11"
 podfile: Podfile
 cache:
   bundler: true
@@ -18,4 +18,4 @@ before_install:
   - cd ./ios/example
   - mv ./gs ./GoogleService-Info.plist
   - cd ..
-script: xcodebuild -workspace example.xcworkspace -scheme "example" -destination "platform=iOS Simulator,OS=11.3,name=iPhone X" clean | xcpretty
+script: xcodebuild -workspace example.xcworkspace -scheme example -destination "platform=iOS Simulator,OS=14.0,name=iPhone 11" -configuration Debug | xcpretty
