--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
   - cd ./ios/example
   - mv ./gs ./GoogleService-Info.plist
   - cd ..
-script: xcodebuild -workspace example.xcworkspace -scheme example -destination "platform=iOS Simulator,OS=14.0,name=iPhone 11" -configuration Debug | xcpretty
+script: set -o pipefail && xcodebuild -workspace example.xcworkspace -scheme example -destination "platform=iOS Simulator,OS=14.0,name=iPhone 11" -configuration Debug | xcpretty
