--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,7 @@
  allprojects {
      repositories {
          google()
+         mavenCentral()
          mavenLocal()
          jcenter()
          maven {
