--- a/example/package.json
+++ b/example/package.json
@@ -15,13 +15,13 @@
     "react-native-firebaseui-auth": "git+https://github.com/oijusti/react-native-firebaseui-auth.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.5.1",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "@babel/core": "7.8.4",
+    "@babel/runtime": "7.8.4",
+    "@react-native-community/eslint-config": "1.1.0",
+    "babel-jest": "25.1.0",
+    "eslint": "6.5.1",
+    "jest": "25.1.0",
+    "metro-react-native-babel-preset": "0.59.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
