--- a/example/package.json
+++ b/example/package.json
@@ -25,6 +25,9 @@
     "react-test-renderer": "17.0.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|react-native-firebaseui-auth)/)"
+    ]
   }
 }
