--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ jobs:
     steps:
       - checkout
 
-      # - restore_cache:
-      #     key: yarn-v1-{{ checksum "example/yarn.lock" }}-{{ arch }}
+      - restore_cache:
+          key: yarn-v1-{{ checksum "example/yarn.lock" }}-{{ arch }}
 
-      # - restore_cache:
-      #     key: node-v1-{{ checksum "example/package.json" }}-{{ arch }}
+      - restore_cache:
+          key: node-v1-{{ checksum "example/package.json" }}-{{ arch }}
 
       - run:
           name: install dependences
