--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -3,14 +3,15 @@ project 'example.xcodeproj'
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'example' do
   # Add the Firebase pod for Google Analytics
-  pod 'Firebase/Analytics'
+  pod 'Firebase/Analytics', '~>8.6.0'
   # Add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
   pod 'FirebaseUI'
+  # pod 'FirebaseUI/Auth'
   # pod 'FirebaseUI/Google'
   # pod 'FirebaseUI/Facebook'
   # pod 'FirebaseUI/OAuth' # Used for Sign in with Apple, Twitter, etc
@@ -19,7 +20,11 @@ target 'example' do
 
   config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
 
   target 'exampleTests' do
     inherit! :complete
@@ -29,18 +34,11 @@ target 'example' do
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  use_flipper!({ 'Flipper-Folly' => '2.3.0' })
+  # you should disable the next line.
+  use_flipper!()
+
   post_install do |installer|
-    flipper_post_install(installer)
-  end
-end
-
-target 'example-tvOS' do
-  # Pods for example-tvOS
-
-  target 'example-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
+    react_native_post_install(installer)
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
